<resources>
    <string name="app_name">Navver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coordinates">X, Y</string>
    <string name="starting_point">נקודת התחלה</string>
    <string name="finish_point">נקודת סיום</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sensors">חיישנים</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">wifi</string>
    <string name="gyroscope">gyroscope</string>
    <string name="cellular">Cellular</string>
    <string name="location_providers">ספקי מיקום</string>
    <string name="google">Google</string>
    <string name="nogpsnavigator">NoGPSNavigator</string>
    <string name="wigle_net">wigle.net</string>
    <string name="wifidb">wifidb</string>
    <string name="realtime_location">ניווט בזמן אמת</string>
    <string name="realtime_location_status">סטטוס</string>
    <string name="valid">תקין</string>
    <string name="off">כבוי</string>
    <string name="who_we_are_description">NoGPSNavigator היא אפליקציה ללא מטרות רווח שמפותחת ומתופעלת על ידי מתנדבים, ומטרתה לסייע לניווט ללא שימוש בחיישני GPS. האפליקציה עושה שימוש בחיישנים נוספים של הטלפון ומשלבת מספר טכניקות לקביעת מיקום.</string>
    <string name="who_we_are_title">מי אנחנו?</string>
    <string name="how_it_works">כיצד האפליקציה עובדת</string>
    <string name="how_it_works_description">האפליקציה עושה שימוש במגוון חיישני הטלפון (בעיקר WIFI ותאי סלולאר) על מנת לקבוע את מיקום המשתמש. האפליקציה *אינה* עושה שימוש טכנולוגיה חדשה, ולמעשה אותה הטכנולוגיה הזאת כבר מוטמעת בסמארטפונים המודרניים (מקוטלג תחת "Coarse Location") ונעשה בה שימוש באפליקציות הניווט המוכרות. הייחודיות של האפליקציה היא הסתמכות בלעדית על אותם מזהי מיקום "חלשים" שהסמארטפון חשוף אליהם, ובשילוב עם מנגנונים נוספים מייעלת את דיוק המיקום.</string>
    <string name="nogpscontact_mail_nogpsnavigator_top">לפניות/דיווח באגים/התנדבות צרו קשר עם nogpscontact@gmail.com</string>
    <string name="whats_new">מה חדש?</string>
    <string name="title_activity_bottom_test">bottom_test</string>
    <string name="title_navigate">ניווט</string>
    <string name="title_settings">הגדרות</string>
    <string name="title_about">אודות</string>
    <string name="status">סטטוס תקינות</string>
    <string name="na_status">N/A</string>
    <string name="application_created">[+] Application created</string>
    <string name="hint_log">[+] Application created</string>
</resources>